# example-nim-cmake

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  main.c
src/nim/: CMakeLists.txt  fib.nim  interop.h  interop.nimble
